Logoutput/manifests/gcloud_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logoutput-dep
  #namespace: logoutput
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      # volumes:
      #   - name: shared-image
      #     persistentVolumeClaim:
      #       claimName: image-claim
      containers:
      - name: logoutput
        image: rsarpal/k8s_logoutput:latest
        # volumeMounts:
        #   - name: shared-image
        #     mountPath: /tmp/kube
        resources:
          limits:
            memory: "80Mi"
            cpu: "100m"
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: NodePort
  selector:
    app: logoutput
  ports:
  - name: http
    protocol: TCP
    port: 4563
    targetPort: 8000
